--- a/html/gallery.html
+++ b/html/gallery.html
@@ -9,24 +9,29 @@
 </head>
 <body>
 <header>
-<a href="../index.html"><img class = "logo" src="../images/web_logo.png"></a>
-<div id="container">
-<nav>
-<ul>
-	<li><a href="../index.html"> Home </a></li>
-	<li><a href="portfolio.html"> Portfolio </a></li>
-	<li><a href="about.html"> About </a></li>
-	<li><a href="services.html"> Services </a></li>
-	<li><a class= "active" href="gallery.html"> Gallery </a></li>
-	<li><a href="contact.html"> Contact </a></li>
-	<li><div class="search-container">
+<nav class="navbar">
+        <a href="../index.html"><img class = "logo" src="../images/web_logo.png"></a>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a href="../index.html"> Home </a></li>
+			<li><a href="portfolio.html"> Portfolio </a></li>
+			<li><a href="about.html"> About </a></li>
+			<li><a href="services.html"> Services </a></li>
+			<li><a class= "active" href="gallery.html"> Gallery </a></li>
+			<li><a href="contact.html"> Contact </a></li>
+            <li><div class="search-container">
     <form>
       <input type="text" placeholder="Search.." name="search">
     </form>
   </div></li>
-</ul>
-</nav>
-</div>
+          </ul>
+        </div>
+      </nav>
 </header>
 <div class="galmain">
 	<center><h1>Browse Our</h1></center>
@@ -51,5 +56,6 @@
 	<footer>
 	<p>&copy Copyright. All Rights Reserved</p>
 </footer>
+<script src="../js/script.js"></script>
 </body>
 </html>
