--- a/index.html
+++ b/index.html
@@ -7,25 +7,30 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
-<a href="index.html"><img class = "logo" src="images/web_logo.png"></a>
-<div id="container">
-<nav>
-<ul>
-	<li><a class= "active" href="index.html"> Home </a></li>
-	<li><a href="html/portfolio.html"> Portfolio </a></li>
-	<li><a href="html/about.html"> About </a></li>
-	<li><a href="html/services.html"> Services </a></li>
-	<li><a href="html/gallery.html"> Gallery </a></li>
-	<li><a href="html/contact.html"> Contact </a></li>
-	<li><div class="search-container">
+<header>
+<nav class="navbar">
+        <a href="index.html"><img class = "logo" src="images/web_logo.png"></a>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a class= "active" href="index.html"> Home </a></li>
+            <li><a href="html/portfolio.html"> Portfolio </a></li>
+            <li><a href="html/about.html"> About </a></li>
+            <li><a href="html/services.html"> Services </a></li>
+            <li><a href="html/gallery.html"> Gallery </a></li>
+            <li><a href="html/contact.html"> Contact </a></li>
+            <li><div class="search-container">
     <form>
       <input type="text" placeholder="Search.." name="search">
     </form>
   </div></li>
-</ul>
-</nav>
-</div>
+          </ul>
+        </div>
+      </nav>
 </header>
     <div class="slideshow-container">
 
@@ -102,7 +107,7 @@
 		</div>
     </div>
 <footer>
-	<p>&copy Copyright. All Rights Reserved</p>
+	<p>&copy; Copyright. All Rights Reserved</p>
 </footer>
     <script src="js/script.js"></script>
 </body>
