--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -64,11 +64,11 @@
 		<center><h2> Teams on this projects </h2></center>
 		<div class="portsec4">
 		<p>At age 14, Easton LaChappelle met a 7-year-old girl who had a prosthetic arm. The limb could only open and close, and yet it cost $80,000. He thought he could do better, and do it for under $1,000. He set to work in his bedroom, and later the family garage. 3D printing of prosthetic arms became an affordable reality.In less than 3 years, he was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner</p>
-		<center><button class="more_button">More</button></center>
+		<center><a href="about.html"><button class="more_button">More</button></a></center>
 		</div>
 		<div class="portsec5">
 		<p>At age 14, Easton LaChappelle met a 7-year-old girl who had a prosthetic arm. The limb could only open and close, and yet it cost $80,000. He thought he could do better, and do it for under $1,000. He set to work in his bedroom, and later the family garage. 3D printing of prosthetic arms became an affordable reality.In less than 3 years, he was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner</p>
-		<center><button class="more_button">More</button></center>
+		<center><a href="about.html"><button class="more_button">More</button></a></center>
 		</div>
 	</div>
 	<footer>
