--- a/html/services.html
+++ b/html/services.html
@@ -44,46 +44,46 @@
 		</tr>
 		<tr>
 			<th rowspan="3">Soft Skill training</th>
-			<td>Communication</td>
-			<td>Communication</td>
+			<td>Critical Thinking</td>
+			<td>Conflict Resolution</td>
 		</tr>
 		<tr>
-			<td>Communication</td>
-			<td>Communication</td>
+			<td>Decision Making</td>
+			<td>Time Management</td>
 		</tr>
 		<tr>
-			<td>Communication</td>
-			<td>Communication</td>
+			<td>Motivation</td>
+			<td>Problem solving</td>
 		</tr>
 		<tr>
-			<th rowspan="3">Soft Skill training</th>
-			<td>Communication</td>
-			<td>Communication</td>
+			<th rowspan="3">Hard Skill training</th>
+			<td>Technical skills</td>
+			<td>Computer skills</td>
 		</tr>
 		<tr>
-			<td>Communication</td>
-			<td>Communication</td>
+			<td>Microsoft Office skills</td>
+			<td>Analytical skills</td>
 		</tr>
 		<tr>
-			<td>Communication</td>
-			<td>Communication</td>
+			<td>Marketing skills</td>
+			<td>Presentation skills</td>
 		</tr>
 		<tr>
-			<th rowspan="4">Soft Skill training</th>
-			<td>Communication</td>
-			<td>Communication</td>
+			<th rowspan="4">Programming Languages</th>
+			<td>Python</td>
+			<td>Java</td>
 		</tr>
 		<tr>
-			<td>Communication</td>
-			<td>Communication</td>
+			<td>C++</td>
+			<td>JavaScript</td>
 		</tr>
 		<tr>
-			<td>Communication</td>
-			<td>Communication</td>
+			<td>PHP</td>
+			<td>C#</td>
 		</tr>
 		<tr>
-			<td>Communication</td>
-			<td>Communication</td>
+			<td>Dart</td>
+			<td>C</td>
 		</tr>
 	</table>
 </div>
