--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     <div class="slideshow-container">
 
         <div class="mySlides fade">
-            <img src="images/img1.png">
+            <img src="images/image1.png">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/img2.png">
+            <img src="images/image2.jpg">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/img3.png">
+            <img src="images/image3.jpg">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -54,41 +54,41 @@
     <div class ="main">
     	<center><h1> One person can change the world for many </h1></center>
     	<div class = "sec1">
-    	<img src="images/teen.jpg">
-    	<p>At age 14, Easton LaChappelle met a 7-year-old girl who had a prosthetic arm. The limb could only open and close, and yet it cost $80,000. He thought he could do better, and do it for under $1,000. He set to work in his bedroom, and later the family garage. 3D printing of prosthetic arms became an affordable reality.</p>
-    <p>In less than 3 years, he was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner.</p>
-    <p>What’s more, he is only doing this to make the world a better place! He could have made millions on his discoveries thus far, but instead, he releases all his intellectual property to the world by making them open sourced!</p>
-    <center><button class="more_button">More</button></center>
+    	<img src="images/img1.png">
+    	<p>Beka Innovation Hub will offer various training programs for entrepreneurs to develop their soft and vocational skills as well as broaden their networking base.</p>
+    <p>It will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact.</p>
+    <p>What’s more, Beka Innovation Hub is doing this to make the world a better place and to know more : </p>
+    <center><a href="html/services.html"><button class="more_button">More</button></a></center>
 </div>
 <div class="sec2">
-    	<img src="images/teen.jpg">
-    	<p>At age 14, Easton LaChappelle met a 7-year-old girl who had a prosthetic arm. The limb could only open and close, and yet it cost $80,000. He thought he could do better, and do it for under $1,000. He set to work in his bedroom, and later the family garage. 3D printing of prosthetic arms became an affordable reality.</p>
-    <p>In less than 3 years, he was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner.</p>
-    <p>What’s more, he is only doing this to make the world a better place! He could have made millions on his discoveries thus far, but instead, he releases all his intellectual property to the world by making them open sourced!</p>
-    <center><button class="more_button">More</button></center>
+    	<img src="images/img2.png">
+    	<p>Beka Innovation Hub will offer various training programs for entrepreneurs to develop their soft and vocational skills as well as broaden their networking base.</p>
+    <p>It will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact.</p>
+    <p>What’s more, Beka Innovation Hub is doing this to make the world a better place and to know more : </p>
+    <center><a href="html/services.html"><button class="more_button">More</button></a></center>
 </div>
 <div class = "sec3">
-<p> How to prepare for an Exam </p>
+<p> Soft Skill Trainings </p>
 <ul>
-<li> Start studying early. </li>
-<li> Read through the entirety of your notes that will be on the exam. </li>
-<li> Get some good notes. </li>
-<li> Ask your teacher about the test material. </li>
-<li> Review your syllabus </li>
-<li> Re-read important selections of the textbook. </li>
-<li> Finally Do some exercises that are on your textbook and other references. </li>
+<li> Critical Thinking </li>
+<li> Conflict Resolution </li>
+<li> Decision Making </li>
+<li> Time Management </li>
+<li> Motivation </li>
+<li> Problem solving </li>
+<li> Creative Thinking </li>
 </ul>
 </div>
 <div class="sec4">
-<p> How to be Successful </p>
+<p> Hardware Skill Trainings </p>
 <ol>
-<li> Start with a positive and fresh mind. </li>
-<li> Find the purpose or goal of your life. </li>
-<li> Define the meaning of success as you see it. </li>
-<li> Set a timeline for when you want to achieve your objective. </li>
-<li> Remove fear and doubt from your way of thinking. </li>
-<li> Ask others for things that you don't know  </li>
-<li> Finally Execute your objectives and if you fail don't quit. </li>
+<li> Technical skills </li>
+<li> Computer skills </li>
+<li> Microsoft Office skills </li>
+<li> Analytical skills </li>
+<li> Marketing skills </li>
+<li> Presentation skills  </li>
+<li> Project management skills </li>
 </ol>
 </div>
     </div>
@@ -96,14 +96,14 @@
 		<div class="sec6">
 		<p>About Us</p>
 		<p> We are working on inventing new things and helping the new generation to understand what is coming and take this world to a better place.</p>
-		<center><button class="more_button">More</button></center>
+		<center><a href="html/about.html"><button class="more_button">More</button></a></center>
 		</div>
 		<div class="sec7">
 		<p>Contact</p>
 		<p> Nifas Silk Lafto, Qemem Street </p>
 		<p> Phone number : +(251)-978061901 </p>
 		<p> Email : bekadessalegn@gmail.com </p>
-		<center><button class="more_button">More</button></center>
+		<center><a href="html/contact.html"><button class="more_button">More</button></a></center>
 		</div>
     </div>
 <footer>
