--- a/html/about.html
+++ b/html/about.html
@@ -37,27 +37,41 @@
 	<center><h1> About Us </h1></center>
 	<p> Founder CEO of Beka Innovation Hub named Beka Dessalegn identified the hurdles of starting a business in Ethiopia and experienced various obstacles first hand during the creation of the organization. He was hyperaware of the various constraints that aspiring entrepreneurs face during the creation of a company. This inspired the creation of Beka Innovation Hub (BIH), digital startup incubator/accelerator whose main aim is to reduce the hurdles that one may face during the startup or their own ventures. BIH is a digital innovation ecosystem where local talent can innovate and collaborate to address global issues in a sector- agnostic manner. The Hub will be a platform where incubatees will get to develop and +accelerate their business ideas from ideation to product-launch stages. In doing so, the hub will provide young entrepreneurs with the network and resources they need to upscale in their respective ventures. </p>
 	<div class="abtsec1">
-		<img src="../images/photo.jpg">
 		<div class = "abtsec2">
+		<div>
+		<img src="../images/photo.jpg">
+		</div>	
+		<div>
 		<h2> CEO </h2>
 		<p> This is the founder of the organization for the Beka Innovation Hub and previously has worked on a lot of projects similar to this in other countries and now wants to take it to his own country Ethiopia.This is the founder of the organization for the Beka Innovation Hub and previously has worked on a lot of projects similar to this in other countries and now wants to take it to his own country Ethiopia.</p>
 		<p> And If you want to contact me personally : </p>
-		<center><button class="more_button">More</button></center>
+		<center><a href="contact.html"><button class="more_button">Reach me</button></a></center>
 		</div>
+		</div>
+		<div class="ourteam">
 		<center><h2> Our Teams </h2></center>
 		<div class="abtsec3">
 			<div class="abtsec4">
 				<center><img src="../images/employee.png"></center>
-				<p> This is the founder of the organization for the Beka Innovation Hub and previously has worked on a lot of projects similar to this in other countries and now wants to take it to his own country Ethiopia.This is the founder of the organization for the Beka Innovation Hub and previously has worked on a lot of projects similar to this in other countries and now wants to take it to his own country Ethiopia.</p>
+				<h2>Manager</h2>
+				<p> To be assigned</p>
 			</div>
 			<div class="abtsec4">
 				<center><img src="../images/employee.png"></center>
-				<p> This is the founder of the organization for the Beka Innovation Hub and previously has worked on a lot of projects similar to this in other countries and now wants to take it to his own country Ethiopia.This is the founder of the organization for the Beka Innovation Hub and previously has worked on a lot of projects similar to this in other countries and now wants to take it to his own country Ethiopia.</p>
+				<h2>Manager</h2>
+				<p> To be assigned</p>
 			</div>
-			<div class="abtsec5">
+			<div class="abtsec4">
 				<center><img src="../images/employee.png"></center>
-				<p> This is the founder of the organization for the Beka Innovation Hub and previously has worked on a lot of projects similar to this in other countries and now wants to take it to his own country Ethiopia.This is the founder of the organization for the Beka Innovation Hub and previously has worked on a lot of projects similar to this in other countries and now wants to take it to his own country Ethiopia.</p>
+				<h2>Manager</h2>
+				<p> To be assigned</p>
 			</div>
+			<div class="abtsec4">
+				<center><img src="../images/employee.png"></center>
+				<h2>Manager</h2>
+				<p> To be assigned</p>
+			</div>
+		</div>
 		</div>
 	</div>
 </div>
