--- a/html/contact.html
+++ b/html/contact.html
@@ -58,9 +58,9 @@
 	</div>
 	<div>
 		<p>Connect</p>
-		<a href=""><p> Facebook </p></a>
-		<a href=""><p> Instagram </p></a>
-		<a href=""><p> Twitter </p></a>
+		<a href="https://www.facebook.com/"><p> Facebook </p></a>
+		<a href="https://www.instagram.com/"><p> Instagram </p></a>
+		<a href="https://twitter.com/"><p> Twitter </p></a>
 		</div>
 	</div>
 </div>
