--- a/html/gallery.html
+++ b/html/gallery.html
@@ -43,14 +43,14 @@
 		<img src="../images/gal3.jpg" class="galimg">
 	</div>
 	<div class="galsec1">
-		<img src="../images/gal4.png">
-		<img src="../images/gal5.png" class="galimg">
-		<img src="../images/gal6.png" class="galimg">
+		<img src="../images/gal4.jpg">
+		<img src="../images/gal5.jpg" class="galimg">
+		<img src="../images/gal6.jpg" class="galimg">
 	</div>
 	<div class="galsec1">
-		<img src="../images/gal7.png">
-		<img src="../images/gal8.png" class="galimg">
-		<img src="../images/gal9.png" class="galimg">
+		<img src="../images/gal7.jpg">
+		<img src="../images/gal8.jpg" class="galimg">
+		<img src="../images/gal9.jpg" class="galimg">
 	</div>
 	</div>
 	<footer>
