--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <nav class="navbar">
-        <a href="../index.html"><img class = "logo" src="../images/web_logo.png"></a>
+        <a href="../index.html"><img class = "logo" src="../images/web_logo.png" alt="Logo"></a>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -39,7 +39,7 @@
 	<div class="abtsec1">
 		<div class = "abtsec2">
 		<div>
-		<img src="../images/photo.jpg">
+		<img src="../images/photo.jpg" alt="image">
 		</div>	
 		<div>
 		<h2> CEO </h2>
@@ -52,22 +52,22 @@
 		<center><h2> Our Teams </h2></center>
 		<div class="abtsec3">
 			<div class="abtsec4">
-				<center><img src="../images/employee.png"></center>
+				<center><img src="../images/employee.png" alt="image"></center>
 				<h2>Manager</h2>
 				<p> To be assigned</p>
 			</div>
 			<div class="abtsec4">
-				<center><img src="../images/employee.png"></center>
+				<center><img src="../images/employee.png" alt="image"></center>
 				<h2>Manager</h2>
 				<p> To be assigned</p>
 			</div>
 			<div class="abtsec4">
-				<center><img src="../images/employee.png"></center>
+				<center><img src="../images/employee.png" alt="image"></center>
 				<h2>Manager</h2>
 				<p> To be assigned</p>
 			</div>
 			<div class="abtsec4">
-				<center><img src="../images/employee.png"></center>
+				<center><img src="../images/employee.png" alt="image"></center>
 				<h2>Manager</h2>
 				<p> To be assigned</p>
 			</div>
