--- a/html/contact.html
+++ b/html/contact.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <nav class="navbar">
-        <a href="../index.html"><img class = "logo" src="../images/web_logo.png"></a>
+        <a href="../index.html"><img class = "logo" src="../images/web_logo.png" alt="Logo"></a>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
