--- a/html/gallery.html
+++ b/html/gallery.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <nav class="navbar">
-        <a href="../index.html"><img class = "logo" src="../images/web_logo.png"></a>
+        <a href="../index.html"><img class = "logo" src="../images/web_logo.png" alt="Logo"></a>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -38,19 +38,19 @@
 	<center><h1> Gallery</h1></center>
 	<p> In Beka Innovation Hub we like to record things that we have done before and one of our methods of recording what we have done is through photos and This are the photos of some of our projects that we have done before : </p>
 	<div class="galsec1">
-		<img src="../images/gal1.jpg">
-		<img src="../images/gal2.jpg" class="galimg">
-		<img src="../images/gal3.jpg" class="galimg">
+		<img src="../images/gal1.jpg" alt="image">
+		<img src="../images/gal2.jpg" class="galimg" alt="image">
+		<img src="../images/gal3.jpg" class="galimg" alt="image">
 	</div>
 	<div class="galsec1">
-		<img src="../images/gal4.jpg">
-		<img src="../images/gal5.jpg" class="galimg">
-		<img src="../images/gal6.jpg" class="galimg">
+		<img src="../images/gal4.jpg" alt="image">
+		<img src="../images/gal5.jpg" class="galimg" alt="image">
+		<img src="../images/gal6.jpg" class="galimg" alt="image">
 	</div>
 	<div class="galsec1">
-		<img src="../images/gal7.jpg">
-		<img src="../images/gal8.jpg" class="galimg">
-		<img src="../images/gal9.jpg" class="galimg">
+		<img src="../images/gal7.jpg" alt="image">
+		<img src="../images/gal8.jpg" class="galimg" alt="image">
+		<img src="../images/gal9.jpg" class="galimg" alt="image">
 	</div>
 	</div>
 	<footer>
