--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <nav class="navbar">
-        <a href="index.html"><img class = "logo" src="images/web_logo.png"></a>
+        <a href="index.html"><img class = "logo" src="images/web_logo.png" alt="Logo"></a>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -35,15 +35,15 @@
     <div class="slideshow-container">
 
         <div class="mySlides fade">
-            <img src="images/image1.png">
+            <img src="images/image1.png" alt="slideimage1">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/image2.jpg">
+            <img src="images/image2.jpg" alt="slideimage2">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/image3.jpg">
+            <img src="images/image3.jpg" alt="slideimage3">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -54,14 +54,14 @@
     <div class ="main">
     	<center><h1> One person can change the world for many </h1></center>
     	<div class = "sec1">
-    	<img src="images/img1.png">
+    	<img src="images/img1.png" alt="image">
     	<p>Beka Innovation Hub will offer various training programs for entrepreneurs to develop their soft and vocational skills as well as broaden their networking base.</p>
     <p>It will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact.</p>
     <p>What’s more, Beka Innovation Hub is doing this to make the world a better place and to know more : </p>
     <center><a href="html/services.html"><button class="more_button">More</button></a></center>
 </div>
 <div class="sec2">
-    	<img src="images/img2.png">
+    	<img src="images/img2.png" alt="image">
     	<p>Beka Innovation Hub will offer various training programs for entrepreneurs to develop their soft and vocational skills as well as broaden their networking base.</p>
     <p>It will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact.</p>
     <p>What’s more, Beka Innovation Hub is doing this to make the world a better place and to know more : </p>
