--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <nav class="navbar">
-        <a href="../index.html"><img class = "logo" src="../images/web_logo.png"></a>
+        <a href="../index.html"><img class = "logo" src="../images/web_logo.png" alt="Logo"></a>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -35,7 +35,7 @@
 </header>
 	<div class="portmain">
 		<center><h2> Here are the works that we have done before</h2></center>
-		<img src="../images/11.jpg">
+		<img src="../images/11.jpg" alt="image">
 		<p>At age 14, Easton LaChappelle met a 7-year-old girl who had a prosthetic arm. The limb could only open and close, and yet it cost $80,000. He thought he could do better, and do it for under $1,000. He set to work in his bedroom, and later the family garage. 3D printing of prosthetic arms became an affordable reality.</p>
 		<p>In less than 3 years, he was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner.</p>
 		<p>What’s more, he is only doing this to make the world a better place! He could have made millions on his discoveries thus far, but instead, he releases all his intellectual property to the world by making them open sourced!</p>
@@ -44,19 +44,19 @@
 	<div class = "portsec1">
 		<center><h2> Projects </h2></center>
 		<div class="portsec2">
-			<img src="../images/merkat.jpg">
+			<img src="../images/merkat.jpg" alt="image">
 			<p>Ethiopian Ministry of Education and Cisco Company to collaborate on ICT free Training for Students</a></p>
 </div>
 <div class="portsec2">
-			<img src="../images/merkat.jpg">
+			<img src="../images/merkat.jpg" alt="image">
 			<p>Ethiopian Ministry of Education and Cisco Company to collaborate on ICT free Training for Students</a></p>
 </div>
 <div class="portsec2">
-			<img src="../images/merkat.jpg">
+			<img src="../images/merkat.jpg" alt="image">
 			<p>Ethiopian Ministry of Education and Cisco Company to collaborate on ICT free Training for Students</a></p>
 </div>
 <div class="portsec2">
-			<img src="../images/merkat.jpg">
+			<img src="../images/merkat.jpg" alt="image">
 			<p>Ethiopian Ministry of Education and Cisco Company to collaborate on ICT free Training for Students</a></p>
 </div>
 	</div>
