--- a/html/about.html
+++ b/html/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>About</title>
 	<link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
@@ -26,6 +26,7 @@
 			<li><a href="contact.html"> Contact </a></li>
             <li><div class="search-container">
     <form>
+    	<label for="search"></label>
       <input type="text" placeholder="Search.." name="search">
     </form>
   </div></li>
