--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Home</title>
 	<link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
@@ -10,11 +10,11 @@
 <header>
 <nav class="navbar">
         <a href="index.html"><img class = "logo" src="images/web_logo.png" alt="Logo"></a>
-        <a href="#" class="toggle-button">
+        <p class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
-        </a>
+        </p>
         <div class="navbar-links">
           <ul>
             <li><a class= "active" href="index.html"> Home </a></li>
@@ -25,6 +25,7 @@
             <li><a href="html/contact.html"> Contact </a></li>
             <li><div class="search-container">
     <form>
+      <label for="search"></label>
       <input type="text" placeholder="Search.." name="search">
     </form>
   </div></li>
