--- a/html/services.html
+++ b/html/services.html
@@ -13,11 +13,11 @@
 <header>
 <nav class="navbar">
         <a href="../index.html"><img class = "logo" src="../images/web_logo.png" alt="Logo"></a>
-        <a href="#" class="toggle-button">
+        <p class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
-        </a>
+        </p>
         <div class="navbar-links">
           <ul>
             <li><a href="../index.html"> Home </a></li>
@@ -28,7 +28,7 @@
 			<li><a href="contact.html"> Contact </a></li>
             <li><div class="search-container">
     <form>
-    	<label for="search"></label>
+    	<label for="search">.</label>
       <input type="text" placeholder="Search.." name="search">
     </form>
   </div></li>
