--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="html/contact.html"> Contact </a></li>
             <li><div class="search-container">
     <form>
-      <label for="search"></label>
+      <label for="search">.</label>
       <input type="text" placeholder="Search.." name="search">
     </form>
   </div></li>
