--- a/html/services.html
+++ b/html/services.html
@@ -29,7 +29,7 @@
             <li><div class="search-container">
     <form>
     	<label for="search">.</label>
-      <input type="text" placeholder="Search.." name="search">
+      <input type="text" placeholder="Search.." id="search" name="search">
     </form>
   </div></li>
           </ul>
