--- a/html/contact.html
+++ b/html/contact.html
@@ -40,9 +40,12 @@
 	<div class="consec1">
 	<h4>Write to us</h4>
 	<p>We will call you back at the earliest</p>
-	<input type="text" name="username" placeholder="Full name">
-	<input type="text" name="email" placeholder="Email">
-	<textarea name="message" placeholder="Message" rows="15" cols="75" style="margin-top: 3%;"></textarea>
+	<label for="fullname">.</label>
+	<input type="text" name="username" id="fullname" placeholder="Full name">
+	<label for="email">.</label>
+	<input type="text" name="email" id="email" placeholder="Email">
+	<label for="msg">.</label>
+	<textarea id="msg" name="message" placeholder="Message" rows="15" cols="75" style="margin-top: 3%;"></textarea>
 	<br>
 	<button class="more_button1">Submit</button>
 	</div>
