--- a/html/contact.html
+++ b/html/contact.html
@@ -34,6 +34,7 @@
         </div>
       </nav>
 </header>
+<main>
 <div class="conmain">
 	<center><h1>Contact Us</h1></center>
 	<center><p> We would love to hear from you and take you out on a free site visit. Kindly get in touch with us if you have any queries and we will get back to you as soon as possible. </p></center>
@@ -68,6 +69,7 @@
 		</div>
 	</div>
 </div>
+</main>
 <footer>
 	<p>&copy Copyright. All Rights Reserved</p>
 </footer>
