--- a/html/about.html
+++ b/html/about.html
@@ -34,6 +34,7 @@
         </div>
       </nav>
 </header>
+<main>
 <div class="abtmain">
 	<center><h1> About Us </h1></center>
 	<p> Founder CEO of Beka Innovation Hub named Beka Dessalegn identified the hurdles of starting a business in Ethiopia and experienced various obstacles first hand during the creation of the organization. He was hyperaware of the various constraints that aspiring entrepreneurs face during the creation of a company. This inspired the creation of Beka Innovation Hub (BIH), digital startup incubator/accelerator whose main aim is to reduce the hurdles that one may face during the startup or their own ventures. BIH is a digital innovation ecosystem where local talent can innovate and collaborate to address global issues in a sector- agnostic manner. The Hub will be a platform where incubatees will get to develop and +accelerate their business ideas from ideation to product-launch stages. In doing so, the hub will provide young entrepreneurs with the network and resources they need to upscale in their respective ventures. </p>
@@ -76,6 +77,7 @@
 		</div>
 	</div>
 </div>
+</main>
 <footer>
 	<p>&copy Copyright. All Rights Reserved</p>
 </footer>
