--- a/html/gallery.html
+++ b/html/gallery.html
@@ -34,6 +34,7 @@
         </div>
       </nav>
 </header>
+<main>
 <div class="galmain">
 	<center><h1>Browse Our</h1></center>
 	<center><h1> Gallery</h1></center>
@@ -54,6 +55,7 @@
 		<img src="../images/gal9.jpg" class="galimg" alt="image">
 	</div>
 	</div>
+	</main>
 	<footer>
 	<p>&copy Copyright. All Rights Reserved</p>
 </footer>
