--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -34,6 +34,7 @@
         </div>
       </nav>
 </header>
+<main>
 	<div class="portmain">
 		<center><h2> Here are the works that we have done before</h2></center>
 		<img src="../images/11.jpg" alt="image">
@@ -72,6 +73,7 @@
 		<center><a href="about.html"><button class="more_button">More</button></a></center>
 		</div>
 	</div>
+	</main>
 	<footer>
 	<p>&copy Copyright. All Rights Reserved</p>
 </footer>
