--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <nav class="navbar">
-        <a href="index.html"><img class = "logo" src="images/web_logo.png" alt="Logo"></a>
+        <a href="index.html"><img class = "logo" src="images/web_logo.png" alt="Logo of our organization"></a>
         <p class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -33,18 +33,19 @@
         </div>
       </nav>
 </header>
+<main>
     <div class="slideshow-container">
 
         <div class="mySlides fade">
-            <img src="images/image1.png" alt="slideimage1">
+            <img src="images/image1.png" alt="The first slide image">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/image2.jpg" alt="slideimage2">
+            <img src="images/image2.jpg" alt="The second slide image">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/image3.jpg" alt="slideimage3">
+            <img src="images/image3.jpg" alt="The third slide image">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -55,21 +56,21 @@
     <div class ="main">
     	<center><h1> One person can change the world for many </h1></center>
     	<div class = "sec1">
-    	<img src="images/img1.png" alt="image">
+    	<img src="images/img1.png" alt="Image for innovation">
     	<p>Beka Innovation Hub will offer various training programs for entrepreneurs to develop their soft and vocational skills as well as broaden their networking base.</p>
     <p>It will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact.</p>
     <p>What’s more, Beka Innovation Hub is doing this to make the world a better place and to know more : </p>
     <center><a href="html/services.html"><button class="more_button">More</button></a></center>
 </div>
 <div class="sec2">
-    	<img src="images/img2.png" alt="image">
+    	<img src="images/img2.png" alt="Second image for innovation">
     	<p>Beka Innovation Hub will offer various training programs for entrepreneurs to develop their soft and vocational skills as well as broaden their networking base.</p>
     <p>It will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact.</p>
     <p>What’s more, Beka Innovation Hub is doing this to make the world a better place and to know more : </p>
     <center><a href="html/services.html"><button class="more_button">More</button></a></center>
 </div>
 <div class = "sec3">
-<p> Soft Skill Trainings </p>
+<h2> Soft Skill Trainings </h2>
 <ul>
 <li> Critical Thinking </li>
 <li> Conflict Resolution </li>
@@ -81,7 +82,7 @@
 </ul>
 </div>
 <div class="sec4">
-<p> Hardware Skill Trainings </p>
+<h2> Hardware Skill Trainings </h2>
 <ol>
 <li> Technical skills </li>
 <li> Computer skills </li>
@@ -107,6 +108,7 @@
 		<center><a href="html/contact.html"><button class="more_button">More</button></a></center>
 		</div>
     </div>
+    </main>
 <footer>
 	<p>&copy; Copyright. All Rights Reserved</p>
 </footer>
