--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     <div class="slideshow-container">
 
         <div class="mySlides fade">
-            <img src="images/image1.png" alt="The first slide image">
+            <img src="images/image1.png" alt="Innovation">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/image2.jpg" alt="The second slide image">
+            <img src="images/image2.jpg" alt="Smart Sustainiblility Environment">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/image3.jpg" alt="The third slide image">
+            <img src="images/image3.jpg" alt="Success">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -81,6 +81,7 @@
 <li> Creative Thinking </li>
 </ul>
 </div>
+<aside>
 <div class="sec4">
 <h2> Hardware Skill Trainings </h2>
 <ol>
@@ -93,6 +94,7 @@
 <li> Project management skills </li>
 </ol>
 </div>
+</aside>
     </div>
     <div class="sec5">
 		<div class="sec6">
