--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <nav class="navbar">
-        <a href="../index.html"><img class = "logo" src="../images/web_logo.png" alt="Logo"></a>
+        <a href="../index.html"><img class = "logo" src="../images/web_logo.png" alt="Logo of our organization"></a>
         <p class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -36,40 +36,39 @@
 </header>
 <main>
 	<div class="portmain">
-		<center><h2> Here are the works that we have done before</h2></center>
-		<img src="../images/11.jpg" alt="image">
-		<p>At age 14, Easton LaChappelle met a 7-year-old girl who had a prosthetic arm. The limb could only open and close, and yet it cost $80,000. He thought he could do better, and do it for under $1,000. He set to work in his bedroom, and later the family garage. 3D printing of prosthetic arms became an affordable reality.</p>
-		<p>In less than 3 years, he was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner.</p>
-		<p>What’s more, he is only doing this to make the world a better place! He could have made millions on his discoveries thus far, but instead, he releases all his intellectual property to the world by making them open sourced!</p>
-		<p>At age 19 he founded Unlimited Tomorrow, a company with the aim to make affordable yet extraordinary robotic limbs.</p>
+		<center><h1> Here are the works that we have done before</h1></center>
+		<img src="../images/11.jpg" alt="Introduction">
+		<p>Beka Innovation Hub will offer various training programs for entrepreneurs to develop their soft and vocational skills as well as broaden their networking base.It will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact.</p>
+		<p>In less than 3 years, the organization was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner.</p>
+		<p>What’s more, the oragnization is only doing this to make the world a better place! They could have made millions on this discoveries thus far, but instead, they release all the intellectual property to the world by making them open sourced!</p>
 	</div>
 	<div class = "portsec1">
 		<center><h2> Projects </h2></center>
 		<div class="portsec2">
-			<img src="../images/merkat.jpg" alt="image">
-			<p>Ethiopian Ministry of Education and Cisco Company to collaborate on ICT free Training for Students</a></p>
+			<img src="../images/gal5.jpg" alt="Help Education Ethiopia">
+			<p>This is one of the websites made for students that are in highschool and above and it contains a lot of features that allows them to be good at their study and makes them improve their knowldege.</p>
 </div>
 <div class="portsec2">
-			<img src="../images/merkat.jpg" alt="image">
-			<p>Ethiopian Ministry of Education and Cisco Company to collaborate on ICT free Training for Students</a></p>
+			<img src="../images/merkat.jpg" alt="Merkat">
+			<p> Mobile application that has been done and it is an application that helps merchants in organizing their properities and allows them to control their properties.</p>
 </div>
 <div class="portsec2">
-			<img src="../images/merkat.jpg" alt="image">
-			<p>Ethiopian Ministry of Education and Cisco Company to collaborate on ICT free Training for Students</a></p>
+			<img src="../images/img1.png" alt="Innovation">
+			<p>It will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact.</p>
 </div>
 <div class="portsec2">
-			<img src="../images/merkat.jpg" alt="image">
-			<p>Ethiopian Ministry of Education and Cisco Company to collaborate on ICT free Training for Students</a></p>
+			<img src="../images/gal8.jpg" alt="Textbooks">
+			<p>This are the textbooks that allows students to improve their study and are easy to download or they can read them online.</p>
 </div>
 	</div>
 	<div class="portsec3">
 		<center><h2> Teams on this projects </h2></center>
 		<div class="portsec4">
-		<p>At age 14, Easton LaChappelle met a 7-year-old girl who had a prosthetic arm. The limb could only open and close, and yet it cost $80,000. He thought he could do better, and do it for under $1,000. He set to work in his bedroom, and later the family garage. 3D printing of prosthetic arms became an affordable reality.In less than 3 years, he was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner</p>
+		<p>Here in this organization we work on improving our world and taking it to a better place.We will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact. And to know more about our teams click the button below : </p>
 		<center><a href="about.html"><button class="more_button">More</button></a></center>
 		</div>
 		<div class="portsec5">
-		<p>At age 14, Easton LaChappelle met a 7-year-old girl who had a prosthetic arm. The limb could only open and close, and yet it cost $80,000. He thought he could do better, and do it for under $1,000. He set to work in his bedroom, and later the family garage. 3D printing of prosthetic arms became an affordable reality.In less than 3 years, he was making a prototype limb for under $500 that was actually interfacing with the nervous system of its owner</p>
+		<p>Here in this organization we work on improving our world and taking it to a better place.We will provide selected tech-startups with an MVP (minimum viable product) and proof of concept with the necessary tools and knowledge they need to accelerate their business and achieve scaled impact. And to know more about our teams click the button below :</p>
 		<center><a href="about.html"><button class="more_button">More</button></a></center>
 		</div>
 	</div>
