--- a/html/gallery.html
+++ b/html/gallery.html
@@ -40,19 +40,19 @@
 	<center><h1> Gallery</h1></center>
 	<p> In Beka Innovation Hub we like to record things that we have done before and one of our methods of recording what we have done is through photos and This are the photos of some of our projects that we have done before : </p>
 	<div class="galsec1">
-		<img src="../images/gal1.jpg" alt="image">
-		<img src="../images/gal2.jpg" class="galimg" alt="image">
-		<img src="../images/gal3.jpg" class="galimg" alt="image">
+		<img src="../images/gal1.jpg" alt="Categories">
+		<img src="../images/gal2.jpg" class="galimg" alt="Items">
+		<img src="../images/gal3.jpg" class="galimg" alt="Add Record">
 	</div>
 	<div class="galsec1">
-		<img src="../images/gal4.jpg" alt="image">
-		<img src="../images/gal5.jpg" class="galimg" alt="image">
-		<img src="../images/gal6.jpg" class="galimg" alt="image">
+		<img src="../images/gal4.jpg" alt="Introduction">
+		<img src="../images/gal5.jpg" class="galimg" alt="Home Page">
+		<img src="../images/gal6.jpg" class="galimg" alt="Subject Shelf">
 	</div>
 	<div class="galsec1">
-		<img src="../images/gal7.jpg" alt="image">
-		<img src="../images/gal8.jpg" class="galimg" alt="image">
-		<img src="../images/gal9.jpg" class="galimg" alt="image">
+		<img src="../images/gal7.jpg" alt="Exams">
+		<img src="../images/gal8.jpg" class="galimg" alt="Textbooks">
+		<img src="../images/gal9.jpg" class="galimg" alt="News">
 	</div>
 	</div>
 	</main>
