--- a/html/about.html
+++ b/html/about.html
@@ -41,7 +41,7 @@
 	<div class="abtsec1">
 		<div class = "abtsec2">
 		<div>
-		<img src="../images/ceo.jpg" alt="CEO">
+		<img src="../images/ceo.jpg" alt="Founder">
 		</div>	
 		<div>
 		<h2> CEO </h2>
@@ -59,18 +59,18 @@
 				<p> This is the Manager of the organization for the Beka Innovation Hub and has had a lot of works related to this and has been awarded the manager of the year.</p>
 			</div>
 			<div class="abtsec4">
-				<center><img src="../images/employee.png" alt="Asisitant Hub Manager"></center>
+				<center><img src="../images/employee.png" alt="Asisitant"></center>
 				<h2>Asisitant Hub Manager</h2>
 				<p> To be assigned</p>
 			</div>
 			<div class="abtsec4">
-				<center><img src="../images/employee.png" alt="Marketing Director"></center>
+				<center><img src="../images/employee.png" alt="Director"></center>
 				<h2>Marketing Director</h2>
 				<p> To be assigned</p>
 			</div>
 			<div class="abtsec4">
-				<center><img src="../images/employee.png" alt="Partnership and Community Development Director"></center>
-				<h2>Partnership and Community Development Director</h2>
+				<center><img src="../images/employee.png" alt="Developer"></center>
+				<h2>Main Developer</h2>
 				<p> To be assigned</p>
 			</div>
 		</div>
