--- a/html/about.html
+++ b/html/about.html
@@ -59,8 +59,8 @@
 				<p> This is the Manager of the organization for the Beka Innovation Hub and has had a lot of works related to this and has been awarded the manager of the year.</p>
 			</div>
 			<div class="abtsec4">
-				<center><img src="../images/employee.png" alt="Asisitant"></center>
-				<h2>Asisitant Hub Manager</h2>
+				<center><img src="../images/employee.png" alt="Assistant"></center>
+				<h2>Assistant Hub Manager</h2>
 				<p> To be assigned</p>
 			</div>
 			<div class="abtsec4">
@@ -69,7 +69,7 @@
 				<p> To be assigned</p>
 			</div>
 			<div class="abtsec4">
-				<center><img src="../images/employee.png" alt="Developer"></center>
+				<center><img src="../images/employee.png" alt="Programmer"></center>
 				<h2>Main Developer</h2>
 				<p> To be assigned</p>
 			</div>
